--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -2,12 +2,9 @@ body {
 
     font-family: arial, "Helvetica Neue", Helvetica, "sans-serif";
     line-height: 120%;
-    color: red;
 }
 
 .container {
-    height: 500px;
-    width: 500px;
     margin: 0 auto;
     border-width: 5px;
     border-style: double;
@@ -21,4 +18,8 @@ h1 {
     padding-top: 10px;
     font-size: 20px;
     font-weight: bold;
+}
+
+p {
+    color: blue;
 }
